# yolo_onnx

./: CMakeLists.txt  README.md  nodes.cpp  package.yaml  yolo_handpose_node.hpp  yolo_node.hpp
.github/workflows/: fins-build.yml
model/: create_handpose_model.py  create_model.py
